# json-comparison

./: .gitignore  CMakeLists.txt  conanfile.txt
schema/nativejson-benchmark/: canada.json
src/: main.cpp  nlohmann_benchmark.cpp  orm_like.cpp  rapid_benchmark.cpp  rapid_schema.cpp  schema_benchmark.cpp
